coins data table: spinner alignment corrected and bottom tab bar tab color changed

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -87,7 +87,7 @@
     --sidebar-ring: oklch(0.709 0.01 56.259);
 
     --main-color: #e4e8f1;
-    --main-color-2: #1e7ce0;
+    --main-color-2: #2663eb;
     --main-bg-color: #ffffff;
     --border-radius: 6px;
     --border-color: #ebeef5;
@@ -97,6 +97,7 @@
     --overview-section-th-color: #9c9c9c;
     --overlay-color: #58667e99;
     --text-color: #333;
+    --bottom-bar-tab-bg-color: #e58d2c;
 }
 
 .dark {
