--- a/styles/_bottom-tab-bar.scss
+++ b/styles/_bottom-tab-bar.scss
@@ -21,7 +21,7 @@
             }
 
             [data-state="active"] {
-                background-color: var(--main-color-2);
+                background-color: var(--bottom-bar-tab-bg-color);
                 color: #fafafa;
             }
 
