--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -24,7 +24,7 @@
         position: relative;
 
         .logo {
-            color: #1e7ce0;
+            color: var(--main-color-2);
             font-size: 20px;
             font-weight: 700;
             margin-right: 12px;
